// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Modal props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "baseId": "test",
        "descriptionId": "",
        "duration": "150ms",
        "hide": [Function],
        "modal": false,
        "place": [Function],
        "placement": "bottom",
        "setModal": [Function],
        "show": [Function],
        "titleId": "",
        "toggle": [Function],
        "unstable_animated": false,
        "unstable_animating": false,
        "unstable_arrowRef": Object {
          "current": null,
        },
        "unstable_arrowStyles": Object {},
        "unstable_idCountRef": Object {
          "current": 0,
        },
        "unstable_modal": false,
        "unstable_originalPlacement": "bottom",
        "unstable_popoverRef": Object {
          "current": null,
        },
        "unstable_popoverStyles": Object {},
        "unstable_referenceRef": Object {
          "current": null,
        },
        "unstable_setBaseId": [Function],
        "unstable_setIsMounted": [Function],
        "unstable_stopAnimation": [Function],
        "unstable_update": [Function],
        "visible": false,
      }
    }
  >
    <React.Fragment>
      <ForwardRef />
    </React.Fragment>
  </Context.Provider>,
  "className": "css-khyygy css-1pwrqjj css-3ekj6a hidden fp-Box fp-Popover",
  "data-dialog": true,
  "hidden": true,
  "id": "test",
  "onAnimationEnd": [Function],
  "onKeyDown": [Function],
  "onTransitionEnd": [Function],
  "ref": [Function],
  "role": "dialog",
  "style": Object {
    "display": "none",
  },
  "tabIndex": -1,
  "wrapElement": [Function],
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-2:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-label="test"
      class="emotion-0 emotion-1 emotion-2 hidden fp-Box fp-Popover"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      Hello world
    </div>
  </div>
</body>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-6:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-3:not(:last-child) {
  margin-bottom: 1rem;
}

<body>
  <div>
    <blockquote
      aria-describedby="popoverContent"
      aria-label="test"
      class="emotion-3 emotion-1 emotion-2 emotion-6 hidden fp-Box fp-Blockquote fp-Popover"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </blockquote>
  </div>
</body>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 test fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`defaultProps should render correctly for hasArrow 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-6:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-3 {
  padding: 0.5rem 0.75rem;
}

.emotion-0 {
  display: grid;
  overflow: hidden;
}

.emotion-0 > svg {
  background-color: transparent;
}

.emotion-0 > svg .stroke {
  fill: #e6e6e6;
}

.emotion-0 > svg .fill {
  fill: white;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-6 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverArrow"
        style="font-size: 30px; width: 1em; height: 1em; pointer-events: none; bottom: 100%;"
      >
        <svg
          style="transform: rotateZ(360deg);"
          viewBox="0 0 30 30"
        >
          <path
            class="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            class="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Arrow.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-6:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-3 {
  padding: 0.5rem 0.75rem;
}

.emotion-0 {
  display: grid;
  overflow: hidden;
}

.emotion-0 > svg {
  background-color: transparent;
}

.emotion-0 > svg .stroke {
  fill: #e6e6e6;
}

.emotion-0 > svg .fill {
  fill: white;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-6 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverArrow"
        style="font-size: 30px; width: 1em; height: 1em; pointer-events: none; bottom: 100%;"
      >
        <svg
          style="transform: rotateZ(360deg);"
          viewBox="0 0 30 30"
        >
          <path
            class="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            class="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Close.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-18 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-18:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-15 {
  padding: 0.5rem 0.75rem;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-11 {
  background-color: red;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 8px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-8 {
  font-size: 0.75em;
  min-height: 2rem;
  padding: 0 0.75rem;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-8:hover {
  background-color: #efefef;
}

.emotion-8:hover:active {
  background-color: #d6d6d6;
}

.emotion-8 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
  box-shadow: unset;
}

.emotion-8:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-8:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-7.emotion-7 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-6 {
  font-size: 1.25rem !important;
}

.emotion-4 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-18 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-12 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
        <button
          aria-disabled="false"
          class="emotion-7 emotion-8 emotion-2 emotion-3 emotion-11 fp-PopoverClose fp-Box fp-Button fp-ButtonClose"
          type="button"
        >
          <svg
            class="emotion-4 emotion-2 emotion-6 fp-Box fp-Icon"
            role="img"
            viewBox="0 0 320 512"
          >
            <path
              d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
          >
            Close
          </span>
        </button>
      </div>
      <div
        class="emotion-15 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Content.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Footer.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-5 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-8 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
      <div
        class="emotion-5 emotion-1 emotion-2 fp-Box fp-PopoverFooter"
      >
        <div
          class="emotion-1 emotion-2 fp-Box"
        >
          This is a footer
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Header.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-10:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-7 {
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-4 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-10 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
      </div>
      <div
        class="emotion-7 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.Title.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-10:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-7 {
  padding: 0.5rem 0.75rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-10 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
      </div>
      <div
        class="emotion-7 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.bottom should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.bottom-end should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.bottom-start should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.center should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.left should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.right should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.top should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.top-end should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.placements.top-start should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`overrides Popover.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-3 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for bottom 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for bottom-end 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for bottom-start 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for center 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for left 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for right 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for top 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for top-end 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props placement should render placement correcty for top-start 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props should render correctly with a footer 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-8 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
      <div
        class="emotion-5 emotion-1 emotion-2 fp-Box fp-PopoverFooter"
      >
        <div
          class="emotion-1 emotion-2 fp-Box"
        >
          This is a footer
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`props should render correctly with a title 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-10:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-7 {
  padding: 0.5rem 0.75rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-10 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
      </div>
      <div
        class="emotion-7 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`props should render correctly with action buttons 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-18 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-18:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-10.emotion-10.emotion-10 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 8px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3 {
  font-size: 0.75em;
  min-height: 2rem;
  padding: 0 0.75rem;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: #efefef;
}

.emotion-3:hover:active {
  background-color: #d6d6d6;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #574feb;
  border-radius: 8px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-6[disabled],
.emotion-6[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-6 {
  font-size: 0.75em;
  min-height: 2rem;
  padding: 0 0.75rem;
}

.emotion-6:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #574feb 0px 0px 0px 1px, #aba7f5 0px 0px 0px 3px;
}

.emotion-6:hover {
  background-color: #4138e8;
}

.emotion-6:hover:active {
  background-color: #2218d5;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-18 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
      <div
        class="emotion-15 emotion-1 emotion-2 fp-Box fp-PopoverFooter"
      >
        <div
          class="emotion-1 emotion-2 fp-Box"
        >
          <div
            class="emotion-9 emotion-10 emotion-1 emotion-2 fp-Box fp-ActionButtons fp-Set"
          >
            <button
              aria-disabled="false"
              class="emotion-3 emotion-1 emotion-2 fp-Box fp-ActionButtonsButton fp-Button"
              type="button"
            >
              Cancel
            </button>
            <button
              aria-disabled="false"
              class="emotion-6 emotion-1 emotion-2 fp-Box fp-ActionButtonsButton fp-Button"
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Arrow.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-6:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-3 {
  padding: 0.5rem 0.75rem;
}

.emotion-0 {
  display: grid;
  overflow: hidden;
}

.emotion-0 > svg {
  background-color: transparent;
}

.emotion-0 > svg .stroke {
  fill: #e6e6e6;
}

.emotion-0 > svg .fill {
  fill: white;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-6 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverArrow"
        style="font-size: 30px; width: 1em; height: 1em; pointer-events: none; bottom: 100%;"
      >
        <svg
          style="transform: rotateZ(360deg);"
          viewBox="0 0 30 30"
        >
          <path
            class="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            class="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Close.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-18 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-18:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-15 {
  padding: 0.5rem 0.75rem;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-11 {
  background-color: red;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 8px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-8 {
  font-size: 0.75em;
  min-height: 2rem;
  padding: 0 0.75rem;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-8:hover {
  background-color: #efefef;
}

.emotion-8:hover:active {
  background-color: #d6d6d6;
}

.emotion-8 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
  box-shadow: unset;
}

.emotion-8:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-8:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-7.emotion-7 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-6 {
  font-size: 1.25rem !important;
}

.emotion-4 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-18 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-12 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
        <button
          aria-disabled="false"
          class="emotion-7 emotion-8 emotion-2 emotion-3 emotion-11 fp-PopoverClose fp-Box fp-Button fp-ButtonClose"
          type="button"
        >
          <svg
            class="emotion-4 emotion-2 emotion-6 fp-Box fp-Icon"
            role="img"
            viewBox="0 0 320 512"
          >
            <path
              d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
          >
            Close
          </span>
        </button>
      </div>
      <div
        class="emotion-15 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Content.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Footer.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-8:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-5 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-8 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
      <div
        class="emotion-5 emotion-1 emotion-2 fp-Box fp-PopoverFooter"
      >
        <div
          class="emotion-1 emotion-2 fp-Box"
        >
          This is a footer
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Header.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-10:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-7 {
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-4 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-10 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
      </div>
      <div
        class="emotion-7 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.Title.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-10:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-7 {
  padding: 0.5rem 0.75rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 0.5rem 0.75rem;
}

.emotion-1 {
  line-height: 1.2;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-0 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      aria-labelledby="popoverTitle"
      class="emotion-10 emotion-2 emotion-3 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
      title="This is a title"
    >
      <div
        class="emotion-4 emotion-2 emotion-3 fp-Box fp-PopoverHeader"
      >
        <span
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-PopoverTitle"
          id="popoverTitle"
        >
          This is a title
        </span>
      </div>
      <div
        class="emotion-7 emotion-2 emotion-3 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.bottom should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.bottom-end should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.bottom-start should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.center should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.left should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.right should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.top should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.top-end should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.placements.top-start should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;

exports[`theming Popover.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 0.5rem 0.75rem;
}

.emotion-3 {
  background-color: white;
  border-radius: 8px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-3:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-3 {
  background-color: red;
}

<body>
  <div>
    <div
      aria-describedby="popoverContent"
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-Popover"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-PopoverContent"
        id="popoverContent"
      >
        Hello world
      </div>
    </div>
  </div>
</body>
`;
